<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtView_expressao"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:singleLine="true"
        android:ellipsize="start"
        android:textColor="@color/black"
        android:textSize="40sp"
        />

    <TextView
        android:id="@+id/txtView_resultado"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="30sp"
        />

    <LinearLayout
        android:id="@+id/linearLayout_chield_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/btn_limpar"
            style="@style/operator_button"
            android:text="@string/btn_limpar"
            />

        <TextView
            android:id="@+id/btn_operador_divisao"
            style="@style/operator_button"
            android:text="@string/btn_operador_divisao"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_chield_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/btn_num_7"
            style="@style/number_button"
            android:text="@string/btn_num_7"
            />

        <TextView
            android:id="@+id/btn_num_8"
            style="@style/number_button"
            android:text="@string/btn_num_8"
            />

        <TextView
            android:id="@+id/btn_num_9"
            style="@style/number_button"
            android:text="@string/btn_num_9"
            />


        <TextView
            android:id="@+id/btn_operador_multiplicacao"
            style="@style/operator_button"
            android:text="@string/btn_operador_multiplicacao"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_chield_3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/btn_num_4"
            style="@style/number_button"
            android:text="@string/btn_num_4"
            />

        <TextView
            android:id="@+id/btn_num_5"
            style="@style/number_button"
            android:text="@string/btn_num_5"
            />

        <TextView
            android:id="@+id/btn_num_6"
            style="@style/number_button"
            android:text="@string/btn_num_6"
            />


        <TextView
            android:id="@+id/btn_operador_subtracao"
            style="@style/operator_button"
            android:text="@string/btn_operador_subtracao"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_filho_4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/btn_num_1"
            style="@style/number_button"
            android:text="@string/btn_num_1"
            />

        <TextView
            android:id="@+id/btn_num_2"
            style="@style/number_button"
            android:text="@string/btn_num_2"
            />

        <TextView
            android:id="@+id/btn_num_3"
            style="@style/number_button"
            android:text="@string/btn_num_3"
            />


        <TextView
            android:id="@+id/btn_operador_adicao"
            style="@style/operator_button"
            android:text="@string/btn_operador_adicao"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_chield_5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/btn_ponto"
            style="@style/number_button"
            android:text="@string/btn_ponto"
            />

        <TextView
            android:id="@+id/btn_num_0"
            style="@style/number_button"
            android:text="@string/btn_num_0"
            />

        <ImageView
            android:id="@+id/btn_backspace"
            style="@style/number_button"
            android:src="@drawable/ic_backspace_button"
            android:scaleType="center"
            />


        <TextView
            android:id="@+id/btn_operador_igual"
            style="@style/operator_button"
            android:text="@string/btn_operador_igual"
            />

    </LinearLayout>

</LinearLayout>